<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/settings_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:visibility="gone">
    </FrameLayout>

    <ScrollView
        android:id="@+id/home_container"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="@dimen/ginormous_spacing">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/home_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_banner_height"
                android:padding="@dimen/ginormous_spacing"

                android:layout_marginBottom="@dimen/large_spacing">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"

                    android:src="@drawable/abs_blur">

                </ImageView>

                <TextView
                    android:text="@string/home_banner_text"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textColor="@color/white"
                    android:textSize="@dimen/home_banner_text"
                    android:fontFamily="sans-serif"
                    android:letterSpacing="0.2"
                    />


            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/home_banner_slogan" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ginormous_spacing" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ginormous_spacing" />

            <TextView
                android:id="@+id/home_contacts_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_contacts_perm_summary"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/default_spacing"
                />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/home_allow_contacts"
                android:layout_width="match_parent"
                style="@style/Theme.Launchpad.ButtonCard"
                >
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/home_action_text"
                    android:text="@string/home_action_contacts_perm"/>

            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ginormous_spacing" />

            <TextView
                android:id="@+id/home_change_assist_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/home_assist_summary"
                android:layout_marginBottom="@dimen/default_spacing"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/home_change_assist"
                android:layout_width="match_parent"
                style="@style/Theme.Launchpad.ButtonCard.Primary"
                >

                <TextView
                    android:id="@+id/home_change_assist_title"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_action_assist"
                    android:textSize="@dimen/home_action_text"
                    />

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_marginTop="@dimen/extra_spacing"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/home_navigation_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:adjustViewBounds="true"
                    app:lottie_rawRes="@raw/navigation"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    />

            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ginormous_spacing" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ginormous_spacing" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/home_alter_summary"
                android:layout_marginBottom="@dimen/default_spacing"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="20dp"
                    >
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/home_button_shortcut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:text="@string/home_alter_shortcut"
                        style="@style/Widget.Material3.Button"
                        />

                    <Space
                        android:layout_width="@dimen/extra_spacing"
                        android:layout_height="0dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/home_button_qs_tile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_alter_qs_tile"
                        android:textAllCaps="true"

                        style="@style/Widget.Material3.Button" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            
        </LinearLayout>
    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/settings_navigation_menu" />

</LinearLayout>
