<?xml version="1.0" encoding="utf-8"?>

<!-- For dynamic spacing for tablets, this nested weighting is required -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:gravity="center_horizontal">

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/parent_layout_space_ratio"
        />

    <LinearLayout
        android:id="@+id/launchpad_main_layout"
        android:clickable="true"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:paddingTop="@dimen/parent_layout_padding_top"
        android:paddingBottom="@dimen/parent_layout_padding_top">

        <androidx.cardview.widget.CardView
            android:id="@+id/search_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.Launchpad.Search">

            <LinearLayout
                android:id="@+id/search_card_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/large_spacing"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"

                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="@dimen/search_action_button_geometry"
                        android:layout_height="@dimen/search_action_button_geometry"
                        android:layout_margin="@dimen/default_spacing"
                        android:id="@+id/action_settings"
                        android:background="@android:color/transparent"
                        android:src="@drawable/baseline_settings_24"
                        android:contentDescription="@string/search_action_settings"
                        />

                    <ImageButton
                        android:layout_width="@dimen/search_action_button_geometry"
                        android:layout_height="@dimen/search_action_button_geometry"
                        android:layout_margin="@dimen/default_spacing"
                        android:id="@+id/action_close"
                        android:background="@android:color/transparent"
                        android:src="@drawable/baseline_close_24"
                        android:contentDescription="@string/search_action_close"

                        />
                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/search_bar_height"
                    style="@style/Theme.Launchpad.SearchBar">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="@dimen/search_bar_input_padding"
                        android:layout_gravity="center"

                        android:drawableLeft="@drawable/baseline_search_24"
                        android:background="@android:color/transparent"
                        android:hint="@string/search_bar_input_text"


                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textColorHint="@color/text_hint"
                        android:textColor="@color/text_primary"

                        android:inputType="text"

                        android:focusable="true"
                        android:focusableInTouchMode="true"

                        android:id="@+id/search_input"
                        android:imeOptions="actionSearch"
                        >

                    </EditText>

                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:visibility="gone"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/search_suggestions_holder_height"
                    android:id="@+id/search_suggestions_view"
                    android:padding="8dp">

                </androidx.recyclerview.widget.RecyclerView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ginormous_spacing" />

                <androidx.recyclerview.widget.RecyclerView
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/search_result_holder_height"
                    android:id="@+id/results_view">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@id/search_card_view"-->
<!--            style="@style/Theme.Launchpad.Bottom"-->
<!--            >-->

<!--            <LinearLayout-->
<!--                android:layout_margin="@dimen/large_spacing"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center">-->

<!--                <androidx.recyclerview.widget.RecyclerView-->
<!--                    android:orientation="horizontal"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="@dimen/pinned_holder_height"-->
<!--                    android:id="@+id/pinned_apps_view">-->

<!--                </androidx.recyclerview.widget.RecyclerView>-->

<!--            </LinearLayout>-->

<!--        </androidx.cardview.widget.CardView>-->

    </LinearLayout>
    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/parent_layout_space_ratio"
        />
</LinearLayout>